# jax_rl

./: .gitignore  README.md  pyproject.toml
config/: train.yaml  train_jaxpallet.yaml  train_rlpallet_uld.yaml  train_rustpool_binpack.yaml
config/alphazero/: train_binpack.yaml  train_jaxpallet.yaml  train_uldenv.yaml
config/binpack/: alphazero.yaml  ppo.yaml  spo.yaml
config/envs/: uldenv2_base.yaml
config/jaxpallet/: alphazero.yaml  ppo.yaml  spo.yaml
config/ppo/: train_binpack.yaml  train_jaxpallet.yaml  train_uldenv.yaml
config/spo/: train_binpack.yaml  train_jaxpallet.yaml  train_uldenv.yaml
config/system/: alphazero.yaml  ppo.yaml  spo.yaml
config/uldenv/: alphazero.yaml  ppo.yaml  spo.yaml
src/jax_rl/: __init__.py  advantages.py  checkpoint.py  cli.py  config.py  env.py  eval.py  export.py  logging.py  losses.py  networks.py  rollout.py  train.py  update.py
src/jax_rl/configs/: __init__.py  config.py  evaluations.py
src/jax_rl/envs/: __init__.py  env.py
src/jax_rl/networks/: __init__.py  networks.py
src/jax_rl/systems/alphazero/: eval.py  search_types.py  steps.py  system.py
src/jax_rl/systems/alphazero/anakin/: README.md  __init__.py  factory.py  steps.py  system.py
src/jax_rl/systems/ppo/: __init__.py  advantages.py  eval.py  losses.py  rollout.py  update.py
src/jax_rl/systems/ppo/anakin/: README.md  factory.py  steps.py  system.py
src/jax_rl/systems/spo/: eval.py  losses.py  steps.py  types.py
src/jax_rl/systems/spo/anakin/: README.md  factory.py  steps.py  system.py
src/jax_rl/utils/: __init__.py  checkpoint.py  exceptions.py  export.py  jax_utils.py  logging.py  runtime.py  shapes.py  types.py
src/purejax_ppo/: __init__.py  env.py  export.py  logging.py  losses.py  rollout.py  types.py  update.py
tests/: conftest.py  test_alphazero_eval.py  test_alphazero_integration.py  test_alphazero_loss_shapes.py  test_alphazero_train.py  test_architecture.py  test_checkpoint_eval.py  test_cli.py  test_config.py  test_env_registry.py  test_eval_config.py  test_gae.py  test_integration.py  test_logging_utils.py  test_metrics.py  test_networks.py  test_onnx_export.py  test_optimizers.py  test_ppo_eval.py  test_ppo_loss.py  test_rollout.py  test_scaling.py  test_shapes.py  test_spo.py  test_tensorboard.py
